--- a/src/less/main.less
+++ b/src/less/main.less
@@ -56,19 +56,19 @@
 	}
 
 	.bg_image {
-		background: url(/dist/images/img_no_checkmark.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    width: 400px;
-    height: 400px;
+		background: url("/dist/images/imgnocheckmark.png");
+	    background-repeat: no-repeat;
+	    background-size: 100% 100%;
+	    width: 400px;
+	    height: 400px;
 	}
 
 	.bg_image_cm {
-		background: url(/dist/images/img_checkmark.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    width: 400px;
-    height: 400px;
+		background: url("/dist/images/imgcheckmark.png");
+	    background-repeat: no-repeat;
+	    background-size: 100% 100%;
+	    width: 400px;
+	    height: 400px;
 	}
 
 	.right-col {
