--- a/src/css/combined.css
+++ b/src/css/combined.css
@@ -1,26 +1,3 @@
-#responsive #user-state {
-  width: 50%;
-  float: left;
-}
-#responsive #user-address {
-  width: 50%;
-  float: right;
-}
-#responsive input[type="submit"] {
-  padding: 14px;
-  background-color: #d1d1d1;
-  border-radius: 5px;
-  font-size: 20px;
-  font-weight: bold;
-  background-color: #ff851f;
-  border-color: #e56800;
-  color: #fff;
-  width: 170px;
-  margin-top: 25px;
-}
-#responsive .modal-header {
-  border-bottom: none;
-}
 #responsive.modal {
   background-color: #eee;
   width: 900px;
@@ -32,66 +9,101 @@
 #responsive.modal.fade.in {
   top: 20%;
 }
-#responsive .modal-body {
-  padding: 13px 26px;
-}
-#responsive .form-control {
-  border-radius: 2px;
-  font-size: 16px;
-  padding: 25px;
-  margin: 0 15px;
-}
-#responsive .col-50 {
+#responsive.modal #user-state {
   width: 50%;
+  float: left;
 }
-#responsive select {
-  height: 50px;
+#responsive.modal #user-address {
+  width: 50%;
+  float: right;
 }
-#responsive #bg_image {
-  background: green;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  width: 400px;
-  height: 400px;
+#responsive.modal input[type="submit"] {
+  padding: 14px;
+  background-color: #d1d1d1;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #ff851f;
+  border-color: #e56800;
+  border: 0;
+  color: #fff;
+  width: 170px;
+  margin-top: 25px;
 }
-#responsive #bg_image_cm {
-  background: red;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  width: 400px;
-  height: 400px;
+#responsive.modal .modal-header {
+  border-bottom: none;
 }
-#responsive .right-col {
+#responsive.modal .modal-body {
+  padding: 0 26px 40px;
+}
+#responsive.modal .col-50 {
+  width: 47%;
+  float: left;
+}
+#responsive.modal select {
+  height: 52px;
+}
+#responsive.modal .right-col {
   text-align: center;
   padding-top: 10px;
 }
-#responsive input.invalid {
+#responsive.modal .right-col #bg_image {
+  background-image: url("../images/imgnocheckmark.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 400px;
+  height: 300px;
+}
+#responsive.modal .form-horizontal .form-control {
+  border-radius: 2px;
+  box-sizing: border-box;
+  font-size: 16px;
+  height: 57px;
+  margin: 0 15px;
+  padding: 17px;
+  -moz-box-sizing: border-box;
+}
+#responsive.modal .form-horizontal input.invalid {
   border: 2px solid #e75600;
 }
-#responsive input.valid {
+#responsive.modal .form-horizontal input.valid {
   border: 2px solid green;
+  background-image: url("../images/img-valid.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 41px 19px;
 }
-#responsive .error {
+#responsive.modal .form-horizontal .error {
   display: none;
 }
-#responsive .error_show {
+#responsive.modal .form-horizontal .error_show {
   color: #fff;
   padding: 5px;
   background-color: #e75600;
   margin-left: 15px;
   width: 100%;
 }
-#responsive .floating-label-form-group {
+#responsive.modal .form-horizontal .row:first-child .floating-label-form-group {
+  border: 1px solid #ccc;
+}
+#responsive.modal .form-horizontal .form-group {
+  margin-right: 0;
+  margin-left: 0;
+}
+#responsive.modal .form-horizontal .form-group.address {
+  margin-left: 24px;
+}
+#responsive.modal .form-horizontal .floating-label-form-group {
   margin-bottom: 0;
   position: relative;
 }
-#responsive .floating-label-form-group input {
-  box-shadow: none !important;
+#responsive.modal .form-horizontal .floating-label-form-group input {
+  box-shadow: none;
   position: relative;
   z-index: 1;
   resize: none;
 }
-#responsive .floating-label-form-group label {
+#responsive.modal .form-horizontal .floating-label-form-group label {
   display: block;
   position: relative;
   padding-left: 15px;
@@ -108,17 +120,14 @@
   -ms-transition: top 0.5s ease, opacity 0.5s ease;
   transition: top 0.5s ease, opacity 0.5s ease;
 }
-#responsive .floating-label-form-group-with-value label {
+#responsive.modal .form-horizontal .floating-label-form-group-with-value label {
   top: 0;
   opacity: 1;
 }
-#responsive .floating-label-form-group-with-focus label {
+#responsive.modal .form-horizontal .floating-label-form-group-with-focus label {
   color: #000;
 }
-#responsive form .row:first-child .floating-label-form-group {
-  border: 1px solid #ccc;
-}
-#responsive .form-horizontal .form-group {
-  margin-right: 0;
-  margin-left: 0;
+.modal-backdrop,
+.modal-backdrop.fade.in {
+  background: #000;
 }
