--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,14 +1,10 @@
 // Place to add variables
-
-@base-font-family:          Helvetica,Arial,sans-serif;
-@base-header-color:         #51a2dc;
-@base-sub-header-color:		#b1b1b4;
-@border-checkbox-color:		#ccc;
-@btn-margin:				20px;
-@font-collapse:				11px;
-@font-table-cells:			12px;
-@input-height:				44px;
-@table-add-row-success:		#dff0d8;
-@table-odd-row-bg:			#f9f9f9;
-@table-border-radius:		6px;
-@table-margin-top: 			25px;
+@font-color-white: #ffffff;
+@input-border-color: #cccccc;
+@input-placeholder-color: #9d9d9d;
+@error-background-color: #e75600;
+@submit-btn-background-color: #ff851f;
+@submit-btn-border-color: #e56800;
+@font-color-black: #000000;
+@modal-bg-color-gray: #eeeeee;
+@floating-label-transition: top 0.5s ease, opacity 0.5s ease;
