--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,21 +1,12 @@
 @import "variables";
 
-// Add main less styles here
+// main less styles
 
 #responsive {
 
 	&.modal {
-		background-color: #eee;
+		background-color: @modal-bg-color-gray;
 		width: 900px;
-		left: 40%;
-
-		&.fade {
-			transition: top .5s ease-out,bottom .5s ease-out,margin-top 1s ease-out;
-
-			&.in {
-				top: 20%;
-			}
-		}
 
 		#user-state {
 			width: 50%;
@@ -32,10 +23,10 @@
 	    border-radius: 5px;
 	    font-size: 20px;
 	    font-weight: bold;
-	    background-color: #ff851f;
-	    border-color: #e56800;
+	    background-color: @submit-btn-background-color;
+	    border-color: @submit-btn-border-color;
 	    border: 0;
-	    color: #fff;
+	    color: @font-color-white;
 	    width: 170px;
 	    margin-top: 25px;
 		}
@@ -48,29 +39,89 @@
 			padding: 0 26px 40px;
 		}
 
+		.modal-dialog {
+			@media (min-width: 768px) {
+		    width: auto;
+		    margin: 0 auto;
+		  }
+		  margin: 0;
+		}
+
+		&.fade {
+			transition: top .5s ease-out,bottom .5s ease-out,margin-top 1s ease-out;
+
+			&.in {
+				top: 5%;
+				left: 40%;
+				@media (min-width: 400px) and (max-width:980px) {
+					left: 0%;
+				}
+			}
+		}
+
 		.col-50 {
 			width: 47%;
 			float: left;
+			@media (max-width:980px) {
+				width: 45%;
+			}
 		}
 
 		select {
 			height: 52px; 
+			background-color: @font-color-white;
+	    border: 1px solid @input-border-color;
+	    outline: none;
+	    font-size: 16px;       
+	    width: 92%;
+	   -webkit-appearance: none;
+	    -moz-appearance: none;
+	    appearance: none;
 
 			&::-webkit-input-placeholder,
 			&::-moz-placeholder,
 			&:-ms-input-placeholder,
 			&:-moz-placeholder {
-			  color: #9d9d9d;
+			  color: @input-placeholder-color;
 			}  
 		}
+
+		.select {   
+	    border-radius:3px;
+	    color:#616263;
+	    overflow: hidden; 
+	    position: relative;
+	    display: block;
+
+	    &:after {
+	    	content:"▼";    
+		    padding: 12px 14px;
+		    position: absolute; 
+		    right: 10px; 
+		    top: 28px;    
+		    z-index: 1;
+		    text-align: center;
+		    width: 10%;
+		    height: 100%;      
+		    pointer-events: none;
+		    box-sizing: border-box;   
+	    }
+		}	
 
 		.right-col {
 			text-align:center;
 			padding-top: 10px;
 
+			@media (max-width:990px) {
+				margin-top:84px;
+			}
+
 			#bg_image {
 				background-image: url("../images/imgnocheckmark.png");
 		    background-repeat: no-repeat;
+		    @media (max-width: 400px) {
+					background-size: 90% 90%;
+				}
 		    background-size: 100% 100%;
 		    width: 400px;
 		    height: 300px;
@@ -84,6 +135,9 @@
 		    font-size: 16px;
 		    height: 57px;
 		    margin: 0 15px;
+		    @media (max-width: 400px) {
+		    	margin: 0 auto;
+		    }
 		    padding: 15px;
 				-moz-box-sizing: border-box;
 			}
@@ -93,7 +147,7 @@
 				&::-moz-placeholder,
 				&:-ms-input-placeholder,
 				&:-moz-placeholder {
-				  color: #9d9d9d;
+				  color: @input-placeholder-color;
 				}
 
 				&::-webkit-contacts-auto-fill-button {
@@ -105,9 +159,9 @@
 				}
 
 				&.invalid {
-					border: 2px solid #e75600;
+					border: 2px solid @error-background-color;
 				}
-				
+
 				&.valid {
 					border: 2px solid green;
 					background-image: url("../images/img-valid.svg");
@@ -119,25 +173,28 @@
 
 			.error {
 				display: none;
-				color: #fff;
+				color: @font-color-white;
 		    padding: 5px;
-		    background-color: #e75600;
+		    background-color: @error-background-color;
 		    margin-left: 15px;
 		    width: 100%;
 			}		
 
 			.error_show{
-				color: #fff;
+				color: @font-color-white;
 				padding: 5px;
-				background-color: #e75600;
+				background-color: @error-background-color;
 				margin-left: 15px;
+				@media (max-width: 400px) {
+					margin-left:0;
+				}
 		    width: 100%;
 			}
 
 			.row{
 				&:first-child {
 					.floating-label-form-group {
-						border: 1px solid #ccc;
+						border: 1px solid @input-border-color;
 					}
 				}
 			}
@@ -166,6 +223,9 @@
 			  	display: block;
 				  position: relative;
 				  padding-left: 15px;
+				  @media (max-width: 400px) {
+						padding-left:0;
+					}
 				  top: 2em;
 				  opacity: 0;
 				  z-index: 0;
@@ -174,10 +234,10 @@
 				  vertical-align: middle;
 				  vertical-align: baseline;
 				  margin: 0;
-				  -webkit-transition: top 0.5s ease, opacity 0.5s ease;
-				     -moz-transition: top 0.5s ease, opacity 0.5s ease;
-				      -ms-transition: top 0.5s ease, opacity 0.5s ease;
-				          transition: top 0.5s ease, opacity 0.5s ease;
+				  -webkit-transition: @floating-label-transition;
+				     -moz-transition: @floating-label-transition;
+				      -ms-transition: @floating-label-transition;
+				          transition: @floating-label-transition;
 			  }
 			}
 
@@ -190,7 +250,7 @@
 
 			.floating-label-form-group-with-focus {
 				label {
-			  	color: #000;
+			  	color: @font-color-black;
 			  }
 			}
 	  }
@@ -198,5 +258,5 @@
 }
 
 .modal-backdrop, .modal-backdrop.fade.in {
-	background: #000;
+	background: @font-color-black;
 }
